# django-favlinks

./: .gitignore  README.md  pyproject.toml
django_favlinks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_favlinks/api/: serializers.py  urls.py  views.py
django_favlinks/migrations/: 0001_initial.py
django_favlinks/static/favlinks/css/: site.css
django_favlinks/static/favlinks/js/: site.js
django_favlinks/templates/favlinks/: bookmark_list.html  bookmark_list_item.html
django_favlinks/templates/favlinks/modals/: bookmark_add_edit.html  bookmark_delete.html  bookmark_publish.html
django_favlinks/templatetags/: custom_filters.py
